--- a/src/popup/scss/layouts/_header.scss
+++ b/src/popup/scss/layouts/_header.scss
@@ -3,8 +3,10 @@
     top: 0;
     z-index: 10;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    flex-flow: wrap;
+    gap: 1rem;
     padding: 1rem 1.5rem;
     backdrop-filter: blur(2rem);
     border-radius: 0 0 1.2rem 1.2rem;
